# CryptoPortfolio

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 4ca29aa2d379_add_unique_to_name_portfolio.py  5578799c558c_add_image_field.py  bf739663d859_add_constraint_unique.py  db27e798133e_init.py
backend/src/: __init__.py  config.py  main.py
backend/src/auth/: base_config.py  manager.py  models.py  schema.py  utils.py
backend/src/binance_api/: binance_http.py  binance_routers.py  binance_schemas.py  binance_service.py  binance_utils.py  binance_websockets.py  depends.py  helpers.py
backend/src/binance_api/controllers/: controller.py
backend/src/binance_api/routers/: binance_routers.py
backend/src/binance_api/routes/: route.py
backend/src/binance_api/schemas/: enum.py  schema.py
backend/src/core/: database.py  depends.py  exceptions.py  settings.py
backend/src/core/services/: async_task_pool.py  (+2 more)
backend/src/db/: database.py
backend/src/investment/: depends.py  helpers.py  investment_repo.py  investment_routers.py  investment_schemas.py  investment_service.py  investment_utils.py
backend/src/portfolio/: depends.py  models.py  portfolio_repo.py  portfolio_routers.py  portfolio_schemas.py  portfolio_service.py  portfolio_utils.py  routers.py  schemas.py  utils.py
backend/src/web3/: depends.py
backend/tests/: conftest.py  factories.py  fixtures.py  test_auth.py  test_portfolio.py
(+81 files in other folders)
