[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode="auto"
[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["ByAvatarOff <tsp7439@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
sqlalchemy = "^2.0.32"
websockets = "^12.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
